[package]
name       = "ibc"
version    = "0.7.3"
edition    = "2018"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository = "https://github.com/informalsystems/ibc-rs"
authors    = ["Informal Systems <hello@informal.systems>"]

description = """
    Implementation of the Inter-Blockchain Communication Protocol (IBC).
    This crate comprises the main data structures and on-chain logic.
"""

[features]
default = ["std", "eyre_tracer"]
std = [
    "flex-error/std",
    "ibc-proto/std",
    "ics23/std",
    "chrono/std",
    "serde/std",
    "serde_json/std",
    "tracing/std",
    "prost/std",
    "prost-types/std",
    "bytes/std",
    "subtle-encoding/std",
    "sha2/std",
    "tendermint/std",
    "tendermint-proto/std",
    "beefy-merkle-tree/std",
    "codec/std",
    "beefy-light-client/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-trie/std",
    "sp-std/std",
    "frame-system/std"
#    "tendermint-testgen/std",
]
eyre_tracer = ["flex-error/eyre_tracer"]
# This feature grants access to development-time mocking libraries, such as `MockContext` or `MockHeader`.
# Depends on the `testgen` suite for generating Tendermint light blocks.
mocks = [ "tendermint-testgen", "sha2" ]

[dependencies]
# Proto definitions for all IBC-related interfaces, e.g., connections or channels.
ibc-proto = { version = "0.11.0", path = "../proto", default-features = false }
ics23 = { version = "0.6.5", default-features = false }
chrono = { version = "0.4.19", default-features = false }
serde_derive = { version = "1.0.104" }
serde = { version = "1.0.130", default-features = false }
serde_json = { version = "1", default-features = false }
tracing = { version = "0.1.28", default-features = false }
prost = { package = "informalsystems-prost", version = "0.8.1", default-features = false }
prost-types = { package = "informalsystems-prost-types", version = "0.8.1", default-features = false }
bytes = { version = "1.1.0", default-features = false }
safe-regex = { version = "0.2.4" }
subtle-encoding = { version = "0.5", default-features = false }
sha2 = { version = "0.9.8", default-features = false, optional = true }
flex-error = { version = "0.4.3", default-features = false }
beefy-light-client = { git = "https://github.com/octopus-network/beefy-light-client.git", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
beefy-merkle-tree = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", features = ["keccak"], default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
blake2-rfc = { version = "0.2.18", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }

[dependencies.tendermint]
version = "=0.22.0"
default-features = false

[dependencies.tendermint-proto]
version = "=0.22.0"
default-features = false

[dependencies.tendermint-testgen]
version = "=0.22.0"
optional = true
default-features = false

[dev-dependencies]
env_logger = "0.9.0"
tracing-subscriber = { version = "0.3.6", features = ["fmt", "env-filter", "json"]}
test-env-log = { version = "0.2.7", features = ["trace"] }
test-log = { version = "0.2.8", features = ["trace"] }
modelator = "0.4.2"
sha2 = { version = "0.10.1" }
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
tendermint-rpc = { version = "=0.22.0", features = ["http-client", "websocket-client"] }
tendermint-testgen = { version = "=0.22.0" } # Needed for generating (synthetic) light blocks.
hex-literal = "0.3.1"
octopusxt = { git = "https://github.com/octopus-network/octopusxt.git", branch = "main", version = "0.1.0" }
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync"] }
subxt = { version = "0.15.0", git = "https://github.com/octopus-network/substrate-subxt.git", branch = 'octopus-v0.9.12' }

[[test]]
name = "mbt"
path = "tests/mbt.rs"
required-features = ["mocks"]
