[package]
name         = "ibc"
version      = "0.12.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/informalsystems/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.58"
description  = """
    Implementation of the Inter-Blockchain Communication Protocol (IBC).
    This crate comprises the main data structures and on-chain logic.
"""

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = [
    "flex-error/std",
    "flex-error/eyre_tracer",
    "ibc-proto/std",
    "clock",
    "ibc-proto/std",
    "ics23/std",
    # "serde_derive/std",
    "serde/std",
    "serde_json/std",
    "tracing/std",
    "prost/std",
    "prost-types/std",
    "bytes/std",
    # "safe-regex/std",
    "subtle-encoding/std",
    "sha2/std",
    "flex-error/std",
    "num-traits/std",
    # "derive_more/std",
    "beefy-light-client/std",
    "codec/std",
    "beefy-merkle-tree/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-trie/std",
    "sp-std/std",
    "hash-db/std",
    "blake2-rfc/std",
    "frame-support/std",
    "frame-system/std",
    "sp-io/std",
    "tendermint/std",
    # "tendermint-proto/std",
    # "tendermint-light-client-verifier/std",
    # "tendermint-testgen/std",
]
clock = [
    "tendermint/clock",
    "time/std"
]

# This feature grants access to development-time mocking libraries, such as `MockContext` or `MockHeader`.
# Depends on the `testgen` suite for generating Tendermint light blocks.
mocks = ["tendermint-testgen", "clock", "std"]

[dependencies]
# Proto definitions for all IBC-related interfaces, e.g., connections or channels.
ibc-proto = { version = "0.16.0", path = "../proto", default-features = false }
ics23 = { version = "0.6.7", default-features = false }
time = { version = "0.3", default-features = false }
serde_derive = { version = "1.0.104", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1", default-features = false }
tracing = { version = "0.1.31", default-features = false }
prost = { version = "0.9", default-features = false }
prost-types = { version = "0.9", default-features = false }
bytes = { version = "1.1.0", default-features = false }
safe-regex = { version = "0.2.5", default-features = false }
subtle-encoding = { version = "0.5", default-features = false }
sha2 = { version = "0.10.2", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "display"] }


# substrate dep
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
hash-db = { version = "0.15.2", default-features = false }
blake2-rfc = { version = "0.2.18", default-features = false }
beefy-merkle-tree = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", features = ["keccak"], default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }

# beefy light client
beefy-light-client = { git = "https://github.com/octopus-network/beefy-light-client.git", branch = "feature/v0.9.13", default-features = false }
hex = "0.4.3"

[dependencies.tendermint]
version = "=0.23.5"
default-features = false

[dependencies.tendermint-proto]
version = "=0.23.5"
default-features = false

[dependencies.tendermint-light-client-verifier]
version = "=0.23.5"
default-features = false

[dependencies.tendermint-testgen]
version = "=0.23.5"
optional = true
default-features = false

[dev-dependencies]
env_logger = "0.9.0"
tracing-subscriber = { version = "0.3.9", features = ["fmt", "env-filter", "json"]}
test-log = { version = "0.2.8", features = ["trace"] }
modelator = "0.4.2"
sha2 = { version = "0.10.2" }
tendermint-rpc = { version = "=0.23.5", features = ["http-client", "websocket-client"] }
tendermint-testgen = { version = "=0.23.5" } # Needed for generating (synthetic) light blocks.
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
hex-literal = "0.3.1"
octopusxt = { git = "https://github.com/octopus-network/octopusxt.git", branch = "feature/v0.9.13"}
# octopusxt = { path = "../../octopusxt" }
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync"] }
subxt = { version = "0.15.0", git = "https://github.com/octopus-network/substrate-subxt.git", branch = 'octopus-v0.9.13' }

[[test]]
name = "mbt"
path = "tests/mbt.rs"
required-features = ["mocks"]
