[package]
name = "no-std-check"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
ibc = { path = "../../modules", default-features = false }
ibc-proto = { path = "../../proto", default-features = false }
tendermint = { version = "0.22", default-features = false }
tendermint-proto = { version = "0.22", default-features = false }

sp-core = { version = "3.0.0", default-features = false, optional = true }
sp-io = { version = "3.0.0", default-features = false, optional = true }
sp-runtime = { version = "3.0.0", default-features = false, optional = true }
sp-std = { version = "3.0.0", default-features = false, optional = true }
sp-runtime-interface = { version = "3.0.0", default-features = false, optional = true}

[features]
default = []
use-substrate = [
  "sp-core",
  "sp-io",
  "sp-runtime",
  "sp-std",
  "sp-runtime-interface",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[patch.crates-io]
tendermint          = { git = "https://github.com/informalsystems/tendermint-rs", branch = "soares/activate-no-std" }
tendermint-proto    = { git = "https://github.com/informalsystems/tendermint-rs", branch = "soares/activate-no-std" }
ics23               = { git = "https://github.com/informalsystems/ics23.git", branch = "master" }
safe-regex          = { git = "https://github.com/informalsystems/safe-regex.git", branch = "main" }
safe-regex-macro    = { git = "https://github.com/informalsystems/safe-regex.git", branch = "main" }
safe-regex-compiler = { git = "https://github.com/informalsystems/safe-regex.git", branch = "main" }
safe-quote          = { git = "https://github.com/informalsystems/safe-regex.git", branch = "main" }
safe-proc-macro2    = { git = "https://github.com/informalsystems/safe-regex.git", branch = "main" }


sp-runtime-interface = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-core = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-runtime = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-std = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }
sp-io = { git = "https://github.com/octopus-network/substrate", branch = "polkadot-v0.9.8" }