[package]
name         = "ibc-relayer"
version      = "0.20.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/informalsystems/hermes"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.60"
description  = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[package.metadata.docs.rs]
all-features = true

[features]
default   = ["flex-error/std", "flex-error/eyre_tracer"]
profiling = []
telemetry = ["ibc-telemetry"]

[dependencies]
ibc = { version = "0.25.0", default-features = false, git = "https://github.com/octopus-network/ibc-rs.git", branch = "fix-mock", features = ["borsh", "mocks-primitives"]}
ibc-proto = { version = "0.21.0" }
#ibc-proto         = { version = "0.21.0" }
ibc-telemetry     = { version = "0.20.0", path = "../telemetry", optional = true }
ibc-relayer-types = { version = "0.20.0", path = "../relayer-types", features = ["mocks"] }

subtle-encoding = "0.5"
humantime-serde = "1.1.1"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0.36"
toml = "0.5"
tracing = "0.1.36"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync"] }
serde_json = { version = "1" }
bytes = "1.2.1"
prost = { version = "0.11" }
tonic = { version = "0.8", features = ["tls", "tls-roots"] }
futures = "0.3.25"
crossbeam-channel = "0.5.5"
k256 = { version = "0.11.5", features = ["ecdsa-core", "ecdsa", "sha256"]}
hex = "0.4"
bitcoin = { version = "0.29.1", features = ["serde"] }
tiny-bip39 = "1.0.0"
hdpath = { version = "0.6.1" }
sha2 = "0.10.6"
tiny-keccak = { version = "2.0.2", features = ["keccak"], default-features = false }
ripemd = "0.1.3"
bech32 = "0.9.1"
itertools = "0.10.5"
dirs-next = "2.0.0"
retry = { version = "2.0.0", default-features = false }
async-stream = "0.3.3"
http = "0.2.8"
flex-error = { version = "0.4.4", default-features = false }
signature = "1.6.0"
anyhow = "1.0"
semver = "1.0"
humantime = "2.1.0"
regex = "1.5.5"
moka = "0.9.4"
uuid = { version = "1.2.1", features = ["v4"] }


# for substrate chain
subxt = { git = "https://github.com/octopus-network/substrate-subxt.git", branch = 'master' }
codec = { package = 'parity-scale-codec', version = '3.1.2', features = ['derive', 'full'] }
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
beefy-light-client = { git = "https://github.com/octopus-network/beefy-light-client.git", branch = "davirain/dev" }
beefy-merkle-tree = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30", features = ["keccak"]}
beefy-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
ics23 = { version = "0.8.0-1" }
prost-types = { version = "0.11" }
libsecp256k1 = { version = "0.7.0", features = ["static-context"] }

# for near chain
near-account-id = "0.15.0"
near-crypto = "0.15"
near-primitives = "0.15"
near-jsonrpc-client = "0.4.0"
near-jsonrpc-primitives = "0.15"

base64 = "0.12.3"
tokio-retry = "0.3.0"
dirs = "3.0"


[dependencies.num-bigint]
version = "0.4"
features = ["serde"]

[dependencies.num-rational]
version = "0.4.1"
features = ["num-bigint", "serde"]

[dependencies.tendermint]
version = "=0.25.0"
features = ["secp256k1"]

[dependencies.tendermint-rpc]
version = "=0.25.0"
features = ["http-client", "websocket-client"]

[dependencies.tendermint-light-client]
version = "=0.25.0"
default-features = false
features = ["rpc-client", "secp256k1", "unstable"]

[dependencies.tendermint-light-client-verifier]
version = "=0.25.0"
default-features = false

[dependencies.tendermint-proto]
version = "=0.25.0"

[dev-dependencies]
ibc-relayer-types = { version = "0.20.0", path = "../relayer-types", features = ["mocks"] }
serial_test = "0.9.0"
env_logger = "0.9.1"
tracing-subscriber = { version = "0.3.14", features = ["fmt", "env-filter", "json"] }
test-log = { version = "0.2.10", features = ["trace"] }

# Needed for generating (synthetic) light blocks.
tendermint-testgen = { version = "=0.25.0" }
