[package]
name = "tendermint-vp-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.9.1"
ic-cdk = "0.9.2"
ring = "0.16.20"
ic-agent = "0.24.1"
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.96"
garcon = "0.2.3"
tokio = { version = "1.28.2", features = ["full"] }
